# alert_app

./: .env.dist  .gitignore  .pre-commit-config.yaml  docker-compose.yml  pyproject.toml  readme.md  web.Dockerfile
.github/workflows/: python-app.yml
src/app/: admin.py  constants.py  models.py  schema.py  views.py
src/app/migrations/: 0001_initial.py  0002_rescuecontact_email.py  0003_rescuecontact_phone_number.py  0004_rename_phone_number_rescuecontact_phone.py
src/app/schema/: mongo_db_rescue_contact_schema.py  rescue_contact_schema.py  send_alarm_schema.py
src/app/tests/: rescue_contact_factory.py  test_api_graphql.py  test_mongo_database.py
src/core/: alert_app_env.py  asgi.py  schema.py  settings.py  urls.py  wsgi.py
