[tool.poetry]
name = "alert-app"
version = "0.1.0"
description = ""
authors = ["SzymKam <szymon15kaminski@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.2"
graphene = "^3.3"
graphene-django = "^3.2.0"
pre-commit = "^3.6.2"
python-decouple = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
