[tool.poetry]
name = "alert-app"
version = "0.1.0"
description = ""
authors = ["SzymKam <szymon15kaminski@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.2"
graphene = "^3.3"
graphene-django = "^3.2.0"
pre-commit = "^3.6.2"
python-decouple = "^3.8"
twilio = "^8.13.0"
mongoengine = "^0.27.0"
graphene-mongo = "^0.4.2"
django-environ = "^0.11.2"
factory-boy = "^3.3.0"
django-extensions = "^3.2.3"
ruff = "^0.3.0"
bandit = "^1.7.7"
safety = "^3.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
